# lambda_ai

./: CHANGELOG.md  lambda-ai.cabal
app/: Genetic.hs  Labirinth.hs  Main.hs  Polynomial.hs  Util.hs
labirintos/: 1.txt
src/: GeneticAlgorithms.hs  Lib.hs  LocalSearch.hs  SearchAlgorithms.hs  Types.hs
src/BaseConcepts/: Labirinth.hs  Types.hs
test/: Main.hs
