cabal-version:      3.0
name:               lambda-ai
version:            0.1.0.4
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Gabriel-Emannuel
maintainer:         gabriel.emannuel.gama.andrade@gmail.com
-- copyright:
category:           AI
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lambda-ai
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>= 4.17.2.1, split, random
    hs-source-dirs:   app, src
    default-language: Haskell2010
    other-modules:    Genetic, Polynomial, Labirinth, Util

library
  
  hs-source-dirs: src
  
  exposed-modules: Types, SearchAlgorithms, GeneticAlgorithms, LocalSearch
  
  build-depends: base >=4.7 && < 5, random
  
  default-language: Haskell2010